--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,6 @@
     <string name="direccion">Direccion</string>
     <string name="telefono">Telefono</string>
     <string name="continua">Continuar</string>
+    <string name="emailTitulo">Email</string>
+    <string name="iniciarSesion">Iniciar Sesion</string>
 </resources>
