--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,6 @@
     <string name="continua">Continuar</string>
     <string name="emailTitulo">Email</string>
     <string name="iniciarSesion">Iniciar Sesion</string>
+    <string name="bienvenido">BIENVENIDO</string>
+    <string name="asterisco">*</string>
 </resources>
