correccion de los errores que me salieron  Java de Registro y welcome como xml

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,4 +16,5 @@
     <string name="iniciarSesion">Iniciar Sesion</string>
     <string name="bienvenido">BIENVENIDO</string>
     <string name="asterisco">*</string>
+    <string name="descripcionImagen">Imagen decorativa</string>
 </resources>
