--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,14 +18,12 @@
     <string name="bienvenido">BIENVENIDO</string>
     <string name="asterisco">*</string>
     <string name="descripcionImagen">Imagen decorativa</string>
-    <string name="sexo">Sexo</string>
     <string name="mujer">Mujer</string>
     <string name="hormbre">Hombre</string>
     <string name="miCuenta">MI CUENTA</string>
     <string name="descripcionB">Describe lo que Buscas</string>
     <string name="Desde">Desde</string>
     <string name="Hasta">Hasta</string>
-    <string name="salario">Salario</string>
     <string name="experiencia">Experiencia</string>
     <string name="referencia">Referencias</string>
     <string name="TipoDeTiempo">Tipo de Tiempo</string>
@@ -37,5 +35,13 @@
     <string name="chat">Chat</string>
     <string name="perfil">Perfil</string>
     <string name="mapa">Mapa</string>
-
+    <string name="hint_escribe_aqui">Escribe aquí</string>
+    <string name="mi_cuenta">MI CUENTA</string>
+    <string name="fecha_nacimiento">Fecha de nacimiento</string>
+    <string name="sexo">Sexo</string>
+    <string name="salario">Salario</string>
+    <string name="mi_experiencia">Mi experiencia</string>
+    <string name="referencias">Referencias</string>
+    <string name="Tipo_de_tiempo">Tipo de tiempo</string>
+    <string name="sobre_mi">Sobre mi</string>
 </resources>
