Creacion de chat falta cosas por agregar y poner en la base de datos pero la estructura ya esta, falta las comunicaciones y guardar los mensajes. Se modifico el perfil publico para que se vea bien a simple vista.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -37,5 +37,6 @@
     <string name="perfil">Perfil</string>
     <string name="mapa">Mapa</string>
     <string name="guardar">Guardar</string>
-
+    <string name="chatTitulo">CHAT</string>
+    <string name="mensaje">Mensaje</string>
 </resources>
