Creacion de chat solo diseño sin ninguna funcionalidad falta cosas por agregar estructura ya esta, falta las comunicaciones y guardar los mensajes. Registro se añadio la validacion de telefono y en Perfil se implemento para que entre en galeria pero no se guarda en PerfilPublico. Primer commit antes de implementar el  chat con una API

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -44,4 +44,7 @@
     <string name="referencias">Referencias</string>
     <string name="Tipo_de_tiempo">Tipo de tiempo</string>
     <string name="sobre_mi">Sobre mi</string>
+    <string name="chatTitulo">CHAT</string>
+    <string name="mensaje">Mensaje</string>
+    <string name="guardar">Guardar</string>
 </resources>
