--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -50,7 +50,7 @@
     <string name="next">Next</string>
     <string name="previous">Previous</string>
     <string name ="guardar">guardar</string>
-    <string name="chatTitulo">chatTitulo</string>
+    <string name="Chat">chatTitulo</string>
     <string name="lorem_ipsum">
         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
         volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
