commit mejorando diseño, chat y mapa.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,7 +14,7 @@
     <string name="continua">Continuar</string>
     <string name="emailTitulo">Email</string>
     <string name="fechaNacimiento">Fecha de Nacimiento</string>
-    <string name="iniciarSesion">Iniciar Sesion</string>
+    <string name="iniciarSesion">Iniciar Sesión</string>
     <string name="bienvenido">BIENVENIDO</string>
     <string name="asterisco">*</string>
     <string name="descripcionImagen">Imagen decorativa</string>
